# fake-productivity

./: .gitignore  Cargo.toml  README.md  matrix.bat  matrix.sh  run.bat  run.sh  setup-fonts.sh  test_jp.txt
docs/: analysis_report.md  refactoring_plan.md  walkthrough.md
src/: font.rs  main.rs  matrix.rs  productivity.rs  terminal.rs  utils.rs
src/args/: mod.rs
