[package]
name = "fake-productivity"
version = "2.0.0"
edition = "2021"
description = "Fullscreen fake productivity terminal application with Matrix mode"
license = "MIT"

[dependencies]
rand = "0.8"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.0"
