[package]
name = "fake-productivity"
version = "2.1.0"
edition = "2021"
description = "Fullscreen fake productivity terminal application with Matrix mode"
license = "MIT"
repository = "https://github.com/alienfacepalm/fake-productivity"
homepage = "https://github.com/alienfacepalm/fake-productivity"
documentation = "https://github.com/alienfacepalm/fake-productivity"
keywords = ["productivity", "terminal", "matrix", "fake", "simulation"]
categories = ["command-line-utilities"]
authors = ["alienfacepalm"]

[dependencies]
rand = "0.8"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.0"
crossterm = "0.27"
